--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 
+# Server Configuration
+server.port=8080
+
+# Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.url=jdbc:mysql://localhost:3306/md_clinic_db
+spring.datasource.username=root
+spring.datasource.password=56689272
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=update
+
+# Logging level
+logging.level.org.springframework=INFO
+logging.level.your.package.name=DEBUG
+
+#JPA properties
+spring.jpa.open-in-view=true
+
+# Actuator endpoints
+management.endpoints.web.exposure.include=*
+
+# Additional custom properties
+# myapp.property=value
