change structure for md history part 1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,7 @@ management.endpoints.web.exposure.include=*
 
 # Additional custom properties
 # myapp.property=value
+
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
+
