--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,202 @@ build/
 
 ### VS Code ###
 .vscode/
+/frontend/generated/jar-resources/vaadin-dev-tools/theme-editor/api.d.ts
+/frontend/generated/jar-resources/vaadin-dev-tools/theme-editor/components/editors/base-property-editor.d.ts
+/frontend/generated/jar-resources/buttonFunctions.js
+/frontend/generated/jar-resources/vaadin-dev-tools/theme-editor/components/editors/checkbox-property-editor.d.ts
+/frontend/generated/jar-resources/vaadin-dev-tools/theme-editor/components/class-name-editor.d.ts
+/frontend/generated/jar-resources/vaadin-dev-tools/theme-editor/components/editors/color-picker.d.ts
+/frontend/generated/jar-resources/vaadin-dev-tools/theme-editor/components/editors/color-property-editor.d.ts
+/frontend/generated/jar-resources/comboBoxConnector.js
+/frontend/generated/jar-resources/vaadin-dev-tools/theme-editor/components/component-overlay-manager.d.ts
+/frontend/generated/jar-resources/vaadin-dev-tools/component-picker.d.ts
+/frontend/generated/jar-resources/vaadin-dev-tools/theme-editor/components/component-resolver.d.ts
+/frontend/generated/jar-resources/vaadin-dev-tools/component-util.d.ts
+/frontend/generated/jar-resources/vaadin-dev-tools/connection.d.ts
+/frontend/generated/jar-resources/contextMenuConnector.js
+/frontend/generated/jar-resources/contextMenuTargetConnector.js
+/frontend/generated/jar-resources/datepickerConnector.js
+/frontend/generated/jar-resources/vaadin-dev-tools/theme-editor/metadata/components/defaults.d.ts
+/frontend/generated/jar-resources/vaadin-dev-tools/theme-editor/detector.d.ts
+/frontend/generated/jar-resources/dnd-polyfill-loader.js
+/frontend/generated/jar-resources/dndConnector.js
+/frontend/generated/jar-resources/vaadin-dev-tools/theme-editor/editor.d.ts
+/frontend/generated/jar-resources/Flow.d.ts
+/frontend/generated/jar-resources/Flow.js
+/frontend/generated/jar-resources/Flow.js.map
+/frontend/generated/jar-resources/flow-component-directive.js
+/frontend/generated/jar-resources/flow-component-renderer.js
+/frontend/generated/jar-resources/FlowBootstrap.d.ts
+/frontend/generated/jar-resources/FlowBootstrap.js
+/src/main/dev-bundle/webapp/VAADIN/build/FlowBootstrap-feff2646.js
+/frontend/generated/jar-resources/FlowClient.d.ts
+/frontend/generated/jar-resources/FlowClient.js
+/src/main/dev-bundle/webapp/VAADIN/build/FlowClient-341d667e.js
+/frontend/generated/flow/generated-flow-imports.d.ts
+/frontend/generated/flow/generated-flow-imports.js
+/src/main/dev-bundle/webapp/VAADIN/build/generated-flow-imports-dc389f35.js
+/frontend/generated/jar-resources/vaadin-dev-tools/theme-editor/metadata/components/generic.d.ts
+/frontend/generated/jar-resources/gridConnector.js
+/frontend/generated/jar-resources/vaadin-time-picker/helpers.js
+/frontend/generated/jar-resources/vaadin-dev-tools/theme-editor/history.d.ts
+/frontend/generated/jar-resources/vaadin-dev-tools/theme-editor/icons.d.ts
+/frontend/generated/jar-resources/index.d.ts
+/frontend/index.html
+/src/main/dev-bundle/webapp/index.html
+/frontend/generated/jar-resources/index.js
+/frontend/generated/jar-resources/index.js.map
+/frontend/generated/index.ts
+/src/main/dev-bundle/webapp/VAADIN/build/indexhtml-69f3bb27.js
+/frontend/generated/jar-resources/vaadin-dev-tools/License.d.ts
+/frontend/generated/jar-resources/lit-renderer.ts
+/frontend/generated/jar-resources/menubarConnector.js
+/frontend/generated/jar-resources/messageListConnector.js
+/frontend/generated/jar-resources/vaadin-dev-tools/theme-editor/metadata/model.d.ts
+/frontend/generated/jar-resources/vaadin-dev-tools/theme-editor/model.d.ts
+/src/main/dev-bundle/package-lock.json
+/frontend/generated/jar-resources/vaadin-dev-tools/theme-editor/metadata/components/presets.d.ts
+/frontend/generated/jar-resources/vaadin-dev-tools/theme-editor/preview.d.ts
+/frontend/generated/jar-resources/vaadin-dev-tools/theme-editor/components/property-list.d.ts
+/frontend/generated/jar-resources/vaadin-dev-tools/theme-editor/components/editors/range-property-editor.d.ts
+/src/main/dev-bundle/README.md
+/frontend/generated/jar-resources/vaadin-dev-tools/theme-editor/metadata/registry.d.ts
+/frontend/generated/jar-resources/vaadin-dev-tools/theme-editor/components/scope-selector.d.ts
+/frontend/generated/jar-resources/selectConnector.js
+/frontend/generated/jar-resources/vaadin-dev-tools/shim.d.ts
+/src/main/dev-bundle/config/stats.json
+/frontend/generated/jar-resources/vaadin-dev-tools/theme-editor/styles.d.ts
+/frontend/generated/jar-resources/vaadin-dev-tools/styles.d.ts
+/frontend/generated/jar-resources/vaadin-dev-tools/theme-editor/components/editors/text-property-editor.d.ts
+/frontend/generated/jar-resources/theme-util.js
+/frontend/generated/jar-resources/vaadin-time-picker/timepickerConnector.js
+/frontend/generated/jar-resources/tooltip.ts
+/frontend/generated/vaadin.ts
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-accordion-eed3b794.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-accordion-eed3b794-3495a6fd.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-accordion-heading-c0acdd6d.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-accordion-heading-c0acdd6d-6d52778e.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-accordion-panel-616e55d6.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-accordion-panel-616e55d6-a0716900.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-app-layout-e56de2e9.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-app-layout-e56de2e9-9b906273.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-avatar-7599297d.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-avatar-7599297d-45e18ec0.js
+/frontend/generated/jar-resources/vaadin-big-decimal-field.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-big-decimal-field-e51def24.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-big-decimal-field-e51def24-ffdb902a.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-board-828ebdea.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-board-828ebdea-f6cdffcd.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-board-row-c70d0c55.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-board-row-c70d0c55-da700f42.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-button-2511ad84.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-button-2511ad84-0fe28a89.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-chart-5192dc15.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-chart-5192dc15-931a4b96.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-checkbox-4e68df64.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-checkbox-4e68df64-0cd32cba.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-checkbox-group-a7c65bf2.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-checkbox-group-a7c65bf2-93c1d827.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-combo-box-96451ddd.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-combo-box-96451ddd-2b6aead1.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-confirm-dialog-4d718829.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-confirm-dialog-4d718829-2aa80913.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-cookie-consent-46c09f8b.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-cookie-consent-46c09f8b-b57d5021.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-crud-8d161a22.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-crud-8d161a22-2ea75bd0.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-custom-field-42c85b9e.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-custom-field-42c85b9e-350bd3d0.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-date-picker-f2001167.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-date-picker-f2001167-19350d48.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-date-time-picker-c8c047a7.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-date-time-picker-c8c047a7-ad465f12.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-details-bf336660.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-details-bf336660-3f4a170c.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-details-summary-351a1448.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-details-summary-351a1448-a4e6ce46.js
+/frontend/generated/jar-resources/vaadin-dev-tools/vaadin-dev-tools.d.ts
+/frontend/generated/jar-resources/vaadin-dev-tools/vaadin-dev-tools.js
+/frontend/generated/jar-resources/vaadin-dev-tools/vaadin-dev-tools.test.d.ts
+/frontend/generated/jar-resources/vaadin-dev-tools/vaadin-dev-tools-info.d.ts
+/frontend/generated/jar-resources/vaadin-dev-tools/vaadin-dev-tools-log.d.ts
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-dialog-53253a08.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-dialog-53253a08-ea800006.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-email-field-d7a35f04.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-email-field-d7a35f04-fa524d7c.js
+/frontend/generated/vaadin-featureflags.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-form-layout-47744b1d.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-form-layout-47744b1d-922e56df.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-grid-0a4791c2.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-grid-0a4791c2-110a96a5.js
+/frontend/generated/jar-resources/vaadin-grid-flow-selection-column.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-grid-pro-ff415555.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-grid-pro-ff415555-c0194f9d.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-horizontal-layout-3193943f.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-horizontal-layout-3193943f-79aa083f.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-icon-601f36ed.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-icon-601f36ed-c5be53c4.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-integer-field-85078932.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-integer-field-85078932-05ea57cf.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-list-box-d7a8433b.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-list-box-d7a8433b-b96af57a.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-login-form-638996c6.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-login-form-638996c6-1045f99b.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-login-overlay-f8a5db8a.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-login-overlay-f8a5db8a-3157448f.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-map-d40a0116.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-map-d40a0116-dd87ec46.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-menu-bar-3f5ab096.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-menu-bar-3f5ab096-b4f9787b.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-message-input-996ac37c.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-message-input-996ac37c-e0642491.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-message-list-70a435ba.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-message-list-70a435ba-964a764e.js
+/frontend/generated/jar-resources/vaadin-mobile-drag-drop.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-mobile-drag-drop-dc77d352.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-multi-select-combo-box-a3373557.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-multi-select-combo-box-a3373557-a2c81dc9.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-notification-bd6eb776.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-notification-bd6eb776-d652dc43.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-number-field-cb3ee8b2.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-number-field-cb3ee8b2-72e7971d.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-password-field-d289cb18.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-password-field-d289cb18-59a639f0.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-progress-bar-309ecf1f.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-progress-bar-309ecf1f-c6ca9b14.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-radio-group-88b5afd8.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-radio-group-88b5afd8-afd2d8ae.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-rich-text-editor-8cd892f2.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-rich-text-editor-8cd892f2-a2a9a9b7.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-scroller-35e68818.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-scroller-35e68818-4d4783a6.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-select-df6e9947.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-select-df6e9947-65d21d57.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-side-nav-ba80d91d.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-side-nav-ba80d91d-ccc2cb83.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-side-nav-item-34918f92.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-side-nav-item-34918f92-1d363ad8.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-split-layout-80c92131.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-split-layout-80c92131-11f4802f.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-spreadsheet-59d8c5ef.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-spreadsheet-59d8c5ef-5cb27998.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-tab-aaf32809.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-tab-aaf32809-e49f167c.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-tabs-d9a5e24e.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-tabs-d9a5e24e-57c131cc.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-tabsheet-dd99ed9a.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-tabsheet-dd99ed9a-1aec0a53.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-text-area-83627ebc.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-text-area-83627ebc-da08395d.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-text-field-0b3db014.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-text-field-0b3db014-e80a2cd7.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-time-picker-715ec415.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-time-picker-715ec415-a340cee6.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-upload-d3c162ed.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-upload-d3c162ed-de58cad4.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-vertical-layout-ad4174c4.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-vertical-layout-ad4174c4-34754da3.js
+/frontend/generated/jar-resources/vaadin-dev-tools/assets/vaadin-virtual-list-96896203.js
+/src/main/dev-bundle/webapp/VAADIN/build/vaadin-virtual-list-96896203-65e629a8.js
+/frontend/generated/jar-resources/virtualListConnector.js
+/frontend/generated/vite-devmode.ts
